--- a/PartnerMaching-backend/pom.xml
+++ b/PartnerMaching-backend/pom.xml
@@ -99,7 +99,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.hty.usercenter.PartnerMatchingApplication</mainClass>
+                    <mainClass>com.hty.partnermatching.PartnerMatchingApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
