--- a/PartnerMatching-frontend/package.json
+++ b/PartnerMatching-frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vant": "^4.9.22",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
