--- a/PartnerMatching-frontend/package.json
+++ b/PartnerMatching-frontend/package.json
@@ -18,6 +18,7 @@
     "@vant/auto-import-resolver": "^1.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "eslint-config-prettier": "^10.1.8",
     "typescript": "~5.9.3",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-components": "^31.0.0",
