--- a/PartnerMaching-backend/pom.xml
+++ b/PartnerMaching-backend/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
