--- a/PartnerMaching-backend/src/main/resources/application.yml
+++ b/PartnerMaching-backend/src/main/resources/application.yml
@@ -5,10 +5,13 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/usercenter
+    url: jdbc:mysql://localhost:3306/partnermachine
   #session失效时间
   session:
     timeout: 86400
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 server:
   port: 8085
   servlet:
