--- a/PartnerMatching-frontend/package.json
+++ b/PartnerMatching-frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "qs": "^6.14.1",
     "vant": "^4.9.22",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
