--- a/PartnerMatching-backend/pom.xml
+++ b/PartnerMatching-backend/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.hty</groupId>
-    <artifactId>partner-maching</artifactId>
+    <artifactId>partner-matching</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>partner-maching</name>
     <description>partner-maching</description>
@@ -77,6 +77,14 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
         </dependency>
     </dependencies>
 
