--- a/PartnerMatching-backend/src/main/resources/application.yml
+++ b/PartnerMatching-backend/src/main/resources/application.yml
@@ -8,9 +8,10 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/partnermachine
-  #session失效时间
+  #session失效时间(min)
   session:
     timeout: 86400
+    store-type: redis
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
