--- a/PartnerMatching-backend/pom.xml
+++ b/PartnerMatching-backend/pom.xml
@@ -86,6 +86,11 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.17.5</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
