--- a/PartnerMatching-backend/src/main/resources/application.yml
+++ b/PartnerMatching-backend/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     active: dev
   application:
     name: partner-maching
+    jackson:
+      date-format: yyyy-MM-dd
+      time-zone: Asia/Shanghai
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
