--- a/PartnerMatching-frontend/package.json
+++ b/PartnerMatching-frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "moment": "^2.30.1",
     "qs": "^6.14.1",
     "vant": "^4.9.22",
     "vue": "^3.5.24",
